--- a/.github/workflows/deploy-to-cloudflare-pages.yml
+++ b/.github/workflows/deploy-to-cloudflare-pages.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup
-        uses: ./.github/actions/setup.yml
+        uses: ./.github/actions/setup
 
       - name: Build
         run: pnpm build
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup
-        uses: ./.github/actions/setup.yml
+        uses: ./.github/actions/setup
 
       - name: Unit test
         run: pnpm test:unit
