update retention day

--- a/.github/workflows/deploy-to-cloudflare-pages.yml
+++ b/.github/workflows/deploy-to-cloudflare-pages.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           name: build-artifacts
           path: ./out
+          retention-days: 1
 
   test:
     needs: build
