--- a/.github/workflows/deploy-to-cloudflare-pages.yml
+++ b/.github/workflows/deploy-to-cloudflare-pages.yml
@@ -27,7 +27,7 @@ jobs:
           path: ./out
           retention-days: 1
 
-  test:
+  test-unit:
     needs: build
     runs-on: ubuntu-latest
 
@@ -41,8 +41,38 @@ jobs:
       - name: Unit test
         run: pnpm test:unit
 
+  test-e2e:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup
+        uses: ./.github/actions/setup
+
+      - name: Install Playwright Browsers
+        run: pnpm exec playwright install --with-deps
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifacts
+          path: ./out
+
+      - name: E2E test
+        run: pnpm test:e2e
+
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 1
+
   deploy:
-    needs: test
+    needs: [test-unit, test-e2e]
     runs-on: ubuntu-latest
     permissions:
       contents: read
